Imagination changelog

xx/xx/19 - 3.x		- Subtitle can now have a pattern.
			- Empty slide background can now be edited. 
			- Added optional background to the slide subtitle. 
			- Got rid of Update button in the Slide Motion as it's now automatic.
			- Moved Add and Remove buttons in the Slide Motion on the right.
14/10/18 - 3.1:
			- Export is now much faster than 3.0!
			- Ending the slideshow with a blank slide with the same transition applied to the first one is now optional.
			- Added an elapsed time information in the Export dialog.
			- Made the slides to be selected during the preview/export and their number shown on the menu bar.
			- Fixed seg-fault when trying to rotate gradient/text slides.
			- Current slideshow is not closed anymore when clicking ok/cancel in the properties/new slideshow dialog.
			- Slide duration can be finally set to less than a second. That was a long requested feature!
			- Added patch from Giovanni Mariani to fix ffmpeg cmd line error when producing VOB.
			- Added two more text transitions and moved -r encoder option before the input filename thanks to Bruce Guenter. 
			- Fixed bugs #82 and #83 thanks to Davide Capodaglio. 
            		- Fixed compilation error on Fedora 13 (check for libm)
            		- Fix loading of slides without image, bug #3306969
            		- Fix: Propose a project name (unknown.img) when saving a new project from the "save" button.
            		- The video formats code was rewritten, including saving/loading the project settings. Fixes bug #3306974.
            		- Added H.264/MPEG-4 AVC support, thanks to David Gnedt

06/03/11 - 3.0:
			- Added Chinese simplified and Chinese traditional translations.
			- Icons in the transition menu are animated.
			- Fixed bug 2900684 in the VOB exported aspect ratio.
			- Added French translation of the documentation thanks to Yann Ubuntu.
			- Added Catalan translation thanks to Manuel Tortosa.
			- Added border to fonts thanks to Robert Cheramy.