@@ -64,6 +64,7 @@ void img_move_audio_down( GtkButton *, img_window_struct * );
 gboolean img_on_expose_event(GtkWidget *,GdkEventExpose *,img_window_struct *);
 void img_ken_burns_zoom_changed( GtkRange *, img_window_struct * );
 gboolean img_image_area_button_press( GtkWidget *, GdkEventButton *, img_window_struct * );
+gboolean img_image_area_button_release( GtkWidget *, GdkEventButton *, img_window_struct * );
 gboolean img_image_area_motion( GtkWidget *, GdkEventMotion *, img_window_struct * );
 void img_clipboard_cut_copy_operation(img_window_struct *, ImgClipboardMode );
 void img_clipboard_clear (GtkClipboard *, img_window_struct *);
